--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,4 +1,8 @@
 <div id="<%= dom_id chat %>">
+<p class="my-5">
+    <strong class="block font-medium mb-1">Name:</strong>
+    <%= chat.name %>
+  </p>
   <p class="my-5">
     <strong class="block font-medium mb-1">Message:</strong>
     <%= chat.message %>
@@ -7,10 +11,13 @@
     <strong class="block font-medium mb-1">AI Response</strong>
     <%= chat.response %>
   </p>
+  <p class="my-5">
+  Created on: <%= chat.created_at.strftime("%c") %>
+  </p>
 
   <% if action_name != "show" %>
-    <%= link_to "Show this chat", chat, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this chat', edit_chat_path(chat), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "Show this chat", chat, class: "rounded-lg py-3 px-5 bg-gray-100 hover:bg-gray-300 inline-block font-medium" %>
+    <%# link_to 'Edit this chat', edit_chat_path(chat), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
 </div>
