--- a/app/views/chats/_form.html.erb
+++ b/app/views/chats/_form.html.erb
@@ -10,13 +10,16 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="my-5">
+    <%= form.label :name, "Optional - Name:" %>
+    <%= form.text_field :name, rows: 1, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  </div>
   <div class="my-5">
     <%= form.label :message %>
     <%= form.text_area :message, rows: 4, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-800 text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
