--- a/app/views/chats/new.html.erb
+++ b/app/views/chats/new.html.erb
@@ -4,6 +4,8 @@
   <p class="my-5"><strong>Note, the AI can sometimes take a while to load! Please be patient when waiting for your response!</strong></p>
 
   <%= render "form", chat: @chat %>
-  
+  <div>
+  <div class="py-2">
   <%= link_to 'Back to chats', chats_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 hover:bg-gray-300 inline-block font-medium" %>
+  </div>
 </div>
