--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -5,11 +5,13 @@
     <% end %>
 
     <%= render @chat %>
-
+    <h2 class="text-lg">Comments:</h2>
+    <%= render @chat.comments %>
+    <%= render 'comments/form' %>
     <%# link_to 'Edit this chat', edit_chat_path(@chat), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
+    <div class="py-2">
       <%# button_to 'Destroy this chat', chat_path(@chat), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    </div>
     <%= link_to 'Back to chats', chats_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 hover:bg-gray-300 inline-block font-medium" %>
+    </div>
   </div>
 </div>
