--- a/app/views/chats/_form.html.erb
+++ b/app/views/chats/_form.html.erb
@@ -19,7 +19,7 @@
     <%= form.text_area :message, rows: 4, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-800 text-white inline-block font-medium cursor-pointer" %>
+  <div class="my-5">
+    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-800 text-white font-medium cursor-pointer" %>
   </div>
 <% end %>
