--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -3,15 +3,14 @@
     <% if notice.present? %>
       <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
     <% end %>
-
+     <div class="py-2">
+      <%# button_to 'Destroy this chat', chat_path(@chat), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <%= link_to 'Back to chats', chats_path, class: "rounded-lg py-3 px-5 bg-gray-100 hover:bg-gray-300 inline-block font-medium" %>
+    </div>
     <%= render @chat %>
-    <h2 class="text-lg">Comments:</h2>
+    <p class=""><strong>Comments:</strong></p>
     <%= render @chat.comments %>
     <%= render 'comments/form' %>
     <%# link_to 'Edit this chat', edit_chat_path(@chat), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="py-2">
-      <%# button_to 'Destroy this chat', chat_path(@chat), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    <%= link_to 'Back to chats', chats_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 hover:bg-gray-300 inline-block font-medium" %>
-    </div>
   </div>
 </div>
