--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="py-1 px-1">
+<div class="py-1 px-1 my-4">
 <p>Enter Comment Below:</p>
 <%= form_with(model: [@chat, @chat.comments.build], class: "contents") do |form| %>
     <div class="my-2">
@@ -10,7 +10,7 @@
     <%= form.text_area :content %>
     </div class="my-2">
     <div class="my-2">
-        <%= form.submit class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 hover:bg-gray-300 inline-block font-medium"  %>
+        <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-800 text-white block font-medium"  %>
     </div>
 <% end %>
 </div>
