--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -11,7 +11,7 @@
   <div id="chats" class="min-w-full">
     <%= render @chats %>
   </div>
-  <div class="min-w-full">
+  <div class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3 sm:px-">
   <%= paginate @chats %>
   </div>
 </div>
