updated site info

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Short Chats Generator using Open AI</h1>
+    <h1 class="font-bold text-4xl">Short Chats Forum using Open AI</h1>
     <%= link_to 'New chat', new_chat_path, class: "rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-800 text-white block font-medium" %>
   </div>
 
