--- a/app/views/chats/new.html.erb
+++ b/app/views/chats/new.html.erb
@@ -4,7 +4,7 @@
   </div>
   <h1 class="font-bold text-4xl">New chat</h1>
    
-  <p class="my-5">Enter in a prompt, question, or request, and the AI will provide you with a response!</p>
+  <p class="my-5">Enter in a prompt, question, or request, and the AI will provide you with a response! Any chat you create will be visible and commentable to other users of the site</p>
   <p class="my-5"><strong>Note, the AI can sometimes take a while to load! Please be patient when waiting for your response!</strong></p>
 
   <%= render "form", chat: @chat %>
